--- a/app/src/main/res/layout/fragment_address.xml
+++ b/app/src/main/res/layout/fragment_address.xml
@@ -7,229 +7,239 @@
     android:background="@android:color/white"
     tools:context="com.testography.am_mvp.ui.fragments.AddressFragment">
 
-    <LinearLayout
+    <android.support.v4.widget.NestedScrollView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="vertical">
+        android:layout_height="wrap_content">
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginEnd="@dimen/spacing_normal_16"
-            android:layout_marginStart="@dimen/spacing_normal_16"
-            android:layout_marginTop="@dimen/spacing_medial_24"
-            android:orientation="horizontal">
+            android:orientation="vertical">
 
-            <ImageView
-                android:layout_width="@dimen/pointer_size"
-                android:layout_height="@dimen/pointer_size"
-                android:layout_marginEnd="@dimen/spacing_normal_16"
-                android:layout_marginRight="@dimen/spacing_normal_16"
-                android:layout_marginTop="@dimen/spacing_small_8"
-                android:src="@drawable/ic_font_download_black_24dp"
-                android:tint="@color/colorAccent"/>
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="vertical">
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginBottom="@dimen/spacing_tiny_4"
-                    android:text="@string/delivery_location_label"
-                    android:textColor="@color/color_grey_darker"
-                    android:textSize="@dimen/font_small_12"/>
-
-                <TextView
-                    android:id="@+id/delivery_location_tv"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="@string/delivery_location"
-                    android:textSize="@dimen/size_small_16"
-                    tools:text="@string/delivery_location"/>
-
-            </LinearLayout>
-
-        </LinearLayout>
-
-        <View
-            android:layout_width="match_parent"
-            android:layout_height="@dimen/line_size_1"
-            android:layout_marginTop="@dimen/spacing_small_12"
-            android:background="@color/grey_light"/>
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginEnd="@dimen/spacing_normal_16"
-            android:layout_marginStart="@dimen/spacing_normal_16"
-            android:layout_marginTop="@dimen/spacing_medial_24"
-            android:orientation="horizontal">
-
-            <ImageView
-                android:layout_width="@dimen/pointer_size"
-                android:layout_height="@dimen/pointer_size"
-                android:layout_marginEnd="@dimen/spacing_normal_16"
-                android:layout_marginRight="@dimen/spacing_normal_16"
-                android:layout_marginTop="@dimen/spacing_small_8"
-                android:backgroundTint="@color/colorAccent"
-                android:src="@drawable/ic_place_black_24dp"
-                android:tint="@color/colorAccent"/>
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="vertical">
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginBottom="@dimen/spacing_tiny_4"
-                    android:text="@string/delivery_location_label"
-                    android:textColor="@color/color_grey_darker"
-                    android:textSize="@dimen/font_small_12"/>
-
-                <TextView
-                    android:id="@+id/street_tv"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="@string/delivery_location"
-                    android:textSize="@dimen/size_small_16"
-                    tools:text="@string/delivery_location"/>
-
-            </LinearLayout>
-
-        </LinearLayout>
-
-        <View
-            android:layout_width="match_parent"
-            android:layout_height="@dimen/line_size_1"
-            android:layout_marginTop="@dimen/spacing_small_12"
-            android:background="@color/grey_light"/>
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginEnd="@dimen/spacing_normal_16"
-            android:layout_marginStart="@dimen/spacing_normal_16"
-            android:layout_marginTop="@dimen/spacing_medial_24"
-            android:orientation="horizontal">
-
-            <LinearLayout
-                android:layout_weight="24"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:orientation="vertical">
-
-                <android.support.design.widget.TextInputLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content">
-
-                    <EditText
-                        android:id="@+id/building_et"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:hint="@string/hint_building"
-                        android:inputType="numberDecimal"
-                        android:textColorHint="@color/color_grey_darker"/>
-
-                </android.support.design.widget.TextInputLayout>
-
-            </LinearLayout>
-
-            <View
-                android:layout_weight="14"
-                android:layout_width="0dp"
-                android:layout_height="1dp"/>
-
-            <LinearLayout
-                android:layout_weight="24"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:orientation="vertical">
-
-                <android.support.design.widget.TextInputLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content">
-
-                    <EditText
-                        android:id="@+id/apartment_et"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:hint="@string/hint_apartment"
-                        android:inputType="numberDecimal"
-
-                        android:textColorHint="@color/color_grey_darker"/>
-
-                </android.support.design.widget.TextInputLayout>
-
-            </LinearLayout>
-
-            <View
-                android:layout_weight="14"
-                android:layout_width="0dp"
-                android:layout_height="1dp"/>
-
-            <LinearLayout
-                android:layout_weight="24"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:orientation="vertical">
-
-                <android.support.design.widget.TextInputLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content">
-
-                    <EditText
-                        android:id="@+id/floor_et"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:enabled="false"
-                        android:focusable="false"
-                        android:hint="@string/hint_floor"
-                        android:inputType="numberDecimal"
-                        android:text="28"
-                        android:textColorHint="@color/color_grey_darker"/>
-
-                </android.support.design.widget.TextInputLayout>
-
-            </LinearLayout>
-
-        </LinearLayout>
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginEnd="@dimen/spacing_normal_16"
-            android:layout_marginStart="@dimen/spacing_normal_16"
-            android:layout_marginTop="@dimen/spacing_medial_24"
-            android:orientation="horizontal">
-
-            <android.support.design.widget.TextInputLayout
+            <android.support.v4.widget.NestedScrollView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content">
 
-                <EditText
-                    android:id="@+id/comments_et"
+            </android.support.v4.widget.NestedScrollView>
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginEnd="@dimen/spacing_normal_16"
+                android:layout_marginStart="@dimen/spacing_normal_16"
+                android:layout_marginTop="@dimen/spacing_medial_24"
+                android:orientation="horizontal">
+
+                <ImageView
+                    android:layout_width="@dimen/pointer_size"
+                    android:layout_height="@dimen/pointer_size"
+                    android:layout_marginEnd="@dimen/spacing_normal_16"
+                    android:layout_marginRight="@dimen/spacing_normal_16"
+                    android:layout_marginTop="@dimen/spacing_small_8"
+                    android:src="@drawable/ic_font_download_black_24dp"
+                    android:tint="@color/colorAccent"/>
+
+                <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:hint="@string/address_comments"
-                    android:inputType="text"
-                    android:textColorHint="@color/color_grey_darker"/>
+                    android:orientation="vertical">
 
-            </android.support.design.widget.TextInputLayout>
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginBottom="@dimen/spacing_tiny_4"
+                        android:text="@string/delivery_location_label"
+                        android:textColor="@color/color_grey_darker"
+                        android:textSize="@dimen/font_small_12"/>
+
+                    <TextView
+                        android:id="@+id/delivery_location_tv"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="@string/delivery_location"
+                        android:textSize="@dimen/size_small_16"
+                        tools:text="@string/delivery_location"/>
+
+                </LinearLayout>
+
+            </LinearLayout>
+
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="@dimen/line_size_1"
+                android:layout_marginTop="@dimen/spacing_small_12"
+                android:background="@color/grey_light"/>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginEnd="@dimen/spacing_normal_16"
+                android:layout_marginStart="@dimen/spacing_normal_16"
+                android:layout_marginTop="@dimen/spacing_medial_24"
+                android:orientation="horizontal">
+
+                <ImageView
+                    android:layout_width="@dimen/pointer_size"
+                    android:layout_height="@dimen/pointer_size"
+                    android:layout_marginEnd="@dimen/spacing_normal_16"
+                    android:layout_marginRight="@dimen/spacing_normal_16"
+                    android:layout_marginTop="@dimen/spacing_small_8"
+                    android:backgroundTint="@color/colorAccent"
+                    android:src="@drawable/ic_place_black_24dp"
+                    android:tint="@color/colorAccent"/>
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="vertical">
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginBottom="@dimen/spacing_tiny_4"
+                        android:text="@string/delivery_location_label"
+                        android:textColor="@color/color_grey_darker"
+                        android:textSize="@dimen/font_small_12"/>
+
+                    <TextView
+                        android:id="@+id/street_tv"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="@string/delivery_location"
+                        android:textSize="@dimen/size_small_16"
+                        tools:text="@string/delivery_location"/>
+
+                </LinearLayout>
+
+            </LinearLayout>
+
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="@dimen/line_size_1"
+                android:layout_marginTop="@dimen/spacing_small_12"
+                android:background="@color/grey_light"/>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginEnd="@dimen/spacing_normal_16"
+                android:layout_marginStart="@dimen/spacing_normal_16"
+                android:layout_marginTop="@dimen/spacing_medial_24"
+                android:orientation="horizontal">
+
+                <LinearLayout
+                    android:layout_weight="24"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:orientation="vertical">
+
+                    <android.support.design.widget.TextInputLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content">
+
+                        <EditText
+                            android:id="@+id/building_et"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:hint="@string/hint_building"
+                            android:inputType="numberDecimal"
+                            android:textColorHint="@color/color_grey_darker"/>
+
+                    </android.support.design.widget.TextInputLayout>
+
+                </LinearLayout>
+
+                <View
+                    android:layout_weight="14"
+                    android:layout_width="0dp"
+                    android:layout_height="1dp"/>
+
+                <LinearLayout
+                    android:layout_weight="24"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:orientation="vertical">
+
+                    <android.support.design.widget.TextInputLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content">
+
+                        <EditText
+                            android:id="@+id/apartment_et"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:hint="@string/hint_apartment"
+                            android:inputType="numberDecimal"
+
+                            android:textColorHint="@color/color_grey_darker"/>
+
+                    </android.support.design.widget.TextInputLayout>
+
+                </LinearLayout>
+
+                <View
+                    android:layout_weight="14"
+                    android:layout_width="0dp"
+                    android:layout_height="1dp"/>
+
+                <LinearLayout
+                    android:layout_weight="24"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:orientation="vertical">
+
+                    <android.support.design.widget.TextInputLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content">
+
+                        <EditText
+                            android:id="@+id/floor_et"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:enabled="false"
+                            android:focusable="false"
+                            android:hint="@string/hint_floor"
+                            android:inputType="numberDecimal"
+                            android:text="28"
+                            android:textColorHint="@color/color_grey_darker"/>
+
+                    </android.support.design.widget.TextInputLayout>
+
+                </LinearLayout>
+
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginEnd="@dimen/spacing_normal_16"
+                android:layout_marginStart="@dimen/spacing_normal_16"
+                android:layout_marginTop="@dimen/spacing_medial_24"
+                android:orientation="horizontal">
+
+                <android.support.design.widget.TextInputLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content">
+
+                    <EditText
+                        android:id="@+id/comments_et"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:hint="@string/address_comments"
+                        android:inputType="text"
+                        android:textColorHint="@color/color_grey_darker"/>
+
+                </android.support.design.widget.TextInputLayout>
+            </LinearLayout>
+
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="@dimen/line_size_1"
+                android:layout_marginTop="@dimen/spacing_small_12"
+                android:background="@color/grey_light"/>
+
         </LinearLayout>
 
-        <View
-            android:layout_width="match_parent"
-            android:layout_height="@dimen/line_size_1"
-            android:layout_marginTop="@dimen/spacing_small_12"
-            android:background="@color/grey_light"/>
-
-    </LinearLayout>
-
+    </android.support.v4.widget.NestedScrollView>
 
     <Button
         android:id="@+id/show_on_map"
