--- a/app/src/main/res/layout/fragment_account.xml
+++ b/app/src/main/res/layout/fragment_account.xml
@@ -90,13 +90,12 @@
                         android:textColor="@color/color_grey_darker"
                         android:textSize="@dimen/font_small_12"/>
 
-                    <TextView
-                        android:id="@+id/account_phone_tv"
+                    <EditText
+                        android:id="@+id/account_phone_et"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="@string/phone"
-                        android:textSize="@dimen/size_small_16"
-                        tools:text="@string/phone"/>
+                        android:textSize="@dimen/font_normal_16"/>
 
                 </LinearLayout>
 
@@ -152,14 +151,13 @@
                             android:textColor="@color/color_grey_darker"
                             android:textSize="@dimen/font_small_12"/>
 
-                        <TextView
-                            android:id="@+id/account_building_tv"
+                        <EditText
+                            android:id="@+id/account_building_ev"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_marginBottom="@dimen/spacing_medial_24"
                             android:text="@string/address"
-                            android:textSize="@dimen/size_small_16"
-                            tools:text="@string/address"/>
+                            android:textSize="@dimen/size_small_16"/>
 
                         <TextView
                             android:layout_width="wrap_content"
@@ -169,13 +167,12 @@
                             android:textColor="@color/color_grey_darker"
                             android:textSize="@dimen/font_small_12"/>
 
-                        <TextView
+                        <EditText
                             android:id="@+id/account_comments_tv"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:text="@string/comments"
-                            android:textSize="@dimen/size_small_16"
-                            tools:text="@string/comments"/>
+                            android:textSize="@dimen/size_small_16"/>
 
                         <View
                             android:layout_width="match_parent"
@@ -209,7 +206,7 @@
                         android:orientation="vertical">
 
                         <TextView
-                            android:id="@+id/tv_account_address_title2"
+                            android:id="@+id/tv_account_address_work"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_marginBottom="@dimen/spacing_tiny_4"
@@ -217,14 +214,13 @@
                             android:textColor="@color/color_grey_darker"
                             android:textSize="@dimen/font_small_12"/>
 
-                        <TextView
-                            android:id="@+id/account_work_tv"
+                        <EditText
+                            android:id="@+id/account_work_ev"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_marginBottom="@dimen/spacing_medial_24"
                             android:text="@string/address"
-                            android:textSize="@dimen/size_small_16"
-                            tools:text="@string/address"/>
+                            android:textSize="@dimen/size_small_16"/>
 
                         <TextView
                             android:layout_width="wrap_content"
@@ -234,13 +230,12 @@
                             android:textColor="@color/color_grey_darker"
                             android:textSize="@dimen/font_small_12"/>
 
-                        <TextView
+                        <EditText
                             android:id="@+id/account_work_comments_tv"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:text="@string/work_comments"
-                            android:textSize="@dimen/size_small_16"
-                            tools:text="@string/work_comments"/>
+                            android:textSize="@dimen/size_small_16"/>
 
                         <View
                             android:layout_width="match_parent"
@@ -305,6 +300,7 @@
                         android:layout_height="wrap_content"
                         android:layout_marginEnd="@dimen/spacing_normal_16"
                         android:layout_marginStart="@dimen/spacing_normal_16"
+                        android:checked="true"
                         android:theme="@style/PushSwitch"/>
 
                 </LinearLayout>
